Upgraded Gradle -> 7.5 and fixed unit tests